--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,38 @@
-.navbar {
-    display: flex;
+* {
+  margin: 0px;
+  font-family: Arial, sans-serif;
 }
+
+.navbar {
+  display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 5px 50px;
+background-color: white;
+}
+
+.navbar img {
+    height: 100px;
+    width: auto;
+}
+
+.navLinks {
+ list-style-type: none;
+display: flex;
+gap: 30px;
+}
+
+.navLinks a {
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+}
+
+.navLinks a:hover {
+    background-color: orange;
+    padding: 12px 12px;
+}
+
+
+
+
