--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,18 @@
   font-family: Arial, sans-serif;
 }
 
+header {
+  height:700px;
+  background-image: url(dogeating.jpg);
+  background-size:cover;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  border-radius: 50px ;
+  margin: 0px 20px;
+}
+
+
+
 .navbar {
   display: flex;
 justify-content: space-between;
@@ -12,10 +24,9 @@ background-color: white;
 }
 
 .navbar img {
-    height: 100px;
+    height: 160px;
     width: auto;
 }
-
 .navLinks {
  list-style-type: none;
 display: flex;
@@ -34,5 +45,25 @@ gap: 30px;
 }
 
 
+#tagline h1 {
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 
+}
+
+.bluehighlight {
+  color: blue;
+}
+
+.footer {
+  background-color: orange;
+  text-align: center;
+  color: white; 
+  margin-top: 50px;
+  padding: 20px; 
+
+
+}
 
