--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
   font-family: Arial, sans-serif;
 }
 
+
+
 header {
   height:700px;
   background-image: url(dogeating.jpg);
@@ -31,18 +33,24 @@ background-color: white;
  list-style-type: none;
 display: flex;
 gap: 30px;
+
 }
 
 .navLinks a {
     text-decoration: none;
     color: black;
     font-size: 20px;
+    
 }
+
+
 
 .navLinks a:hover {
     background-color: orange;
     padding: 12px 12px;
+    border-radius: 12px;
 }
+
 
 
 #tagline h1 {
@@ -57,7 +65,137 @@ gap: 30px;
   color: blue;
 }
 
-.footer {
+
+.about {
+  background-color:blue;
+  border-radius: 50px;
+  margin: 0px 20px;
+  height: 65vh;
+  display: flex;
+  align-items: center; 
+  justify-content: space-between;
+  padding: 50px; 
+  display: flex;
+}
+
+.text h1 {
+  font-size: 73px;
+  color: white;
+  margin-left: 175px;
+ 
+}
+
+
+
+ .imageContainer img {
+  width: 800px;
+  border-radius: 50px;
+  box-shadow: 5px 5px 30px 5px rgba(0, 0, 0, 0.629);
+  max-width: 600;
+  
+
+}
+
+
+.aboutInfo {
+  max-width: 1000px;
+  margin: 30px auto;
+  padding: 20px;
+
+}
+
+.info h1 {
+  font-size: 30px;
+  color: blue;
+}
+
+.info p {
+  margin-top: 30px;
+  font-size: 18px;
+  line-height: 23px;
+}
+
+hr {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-style: solid;
+  border-top-width: 2px;
+  border-color: orange;
+  opacity: 0.5;
+
+}
+
+
+.teammember img {
+  width:35vh;
+  margin-top: 30px;
+}
+
+h3 {
+  margin-top: 15px;
+  color: blue;
+  font-size: 23px;
+}
+
+
+.teammember p {
+  margin-top: 5px ;
+  font-weight: bold;
+  font-size: larger;
+  margin-top: -2px;
+}
+
+.meetteam {
+  display: flex;
+  gap: 20px;
+  margin-left: 20px;
+}
+
+
+
+
+#contact {
+  display: flex;
+  gap: 30px;
+  margin-top: 80px;
+}
+
+
+#contactUs img{
+  width: 60vh;
+  border-radius: 25px;
+  border-color: blue;
+  border-style: solid;
+  border-width: 40px;
+  margin-left: 300px;
+ 
+}
+
+#formContainer {
+  max-width: 800px;
+  margin: 0px 9px;
+
+}
+
+#formContainer p {
+  margin-top: 18px; 
+  margin-bottom: 25px;
+  line-height: 23px;
+}
+
+#redirected {
+  margin-top: 10px;
+}
+
+.returnButton {
+margin-top: 10px;
+}
+
+#successMessage button {
+  margin-top: 15px;
+}
+
+footer {
   background-color: orange;
   text-align: center;
   color: white; 
@@ -67,3 +205,13 @@ gap: 30px;
 
 }
 
+.footer-contact {
+  position: absolute;
+  bottom:0px;
+  width:100%;
+}
+
+.footer a {
+  color: blue;
+  text-decoration: none;
+}
